SAR Blai Sandbox/src/objects/Oportunidad_platform__c.object
<CustomObject>
    <fields>
        <fullName>Frecuencia_SN__c</fullName>
        <label>Frecuencia SN</label>
        <picklist>
            <picklistValues>
                <fullName>Lunes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Martes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miércoles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jueves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viernes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sábado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domingo</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Garantia_Complementaria__c</fullName>
        <label>Garantia Complementaria</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grado_Dependencia__c</fullName>
        <formula>TEXT(Servicio__r.Grado_Dependencia__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grado Dependencia</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grado__c</fullName>
        <label>Grado</label>
        <picklist>
            <picklistValues>
                <fullName>Grado 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grado 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grado 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Historico__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Histórico</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hora_fin_SN__c</fullName>
        <label>Hora fin SN</label>
        <picklist>
            <picklistValues>
                <fullName>1h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24h</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hora_inicio_SN__c</fullName>
        <label>Hora inicio SN</label>
        <picklist>
            <picklistValues>
                <fullName>1h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24h</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hoy__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hoy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <description>Número de la cuenta corriente formado por dos letras y 22 dígitos</description>
        <inlineHelpText>Residencial: Campo obligatorio en Etapa= &apos;Ingreso&apos; / &apos;Cerrada ganada&apos;</inlineHelpText>
        <label>IBAN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Doc_Firmado__c</fullName>
        <description>Identificador del documento enviado para firmar al webservice ViDSigner</description>
        <label>ID Doc Firmado</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVA__c</fullName>
        <defaultValue>0.10</defaultValue>
        <label>IVA Servicio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IVA_del_dispositivo__c</fullName>
        <defaultValue>0.10</defaultValue>
        <label>IVA Dispositivo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IdGCR_EPS__c</fullName>
        <externalId>true</externalId>
        <label>IdGCR_EPS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdNav_RES__c</fullName>
        <formula>Residente__r.IdNAV_RES__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IdNav Residente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdOp_Nav__c</fullName>
        <externalId>true</externalId>
        <label>IdOp_Nav</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_VIV_T24__c</fullName>
        <externalId>true</externalId>
        <label>Id VIV T24</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Id_contrato__c</fullName>
        <label>Id contrato</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Idioma__c</fullName>
        <formula>TEXT(Persona_de_Contacto__r.PersonContact.Idioma_de_Contacto__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Idioma</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informe_Tipo_de_servicio__c</fullName>
        <formula>TEXT(Servicio__r.Tipo_Servicio__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Informe: Tipo de servicio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ingreso__c</fullName>
        <formula>ispickval( Etapa__c ,&apos;Ingreso&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingreso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Institucion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Campo obligatorio en etapa=&apos;Ingreso&apos;</inlineHelpText>
        <label>Institución</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QAd7AAG</value>
            </filterItems>
            <filterItems>
                <field>Account.Institucion_facturable__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades (Institución)</relationshipLabel>
        <relationshipName>Oportunidades4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Integracion_Desactivada__c</fullName>
        <formula>Centro2__r.Integracion_Desactivada__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Integracion Desactivada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFromT24__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsFromT24</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFromTask__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsFromTask</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lavanderia_y_limpieza__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lavandería y limpieza</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Localidad_Entidad_Bancaria__c</fullName>
        <inlineHelpText>Residencial: Campo obligatorio en etapa=&apos;Ingreso&apos;/ &apos;Cerrada ganada&apos;</inlineHelpText>
        <label>Localidad Entidad Bancaria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manutencion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manutención</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medios_de_comunicacion__c</fullName>
        <label>Medios de comunicación</label>
        <picklist>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folletos y flyers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buzoneo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prensa escrita</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Mailing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Motivio_de_Alta_GCR__c</fullName>
        <description>Motivo por el que el residente deja la residencia</description>
        <label>Motivio de Alta GCR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motivo_Baja__c</fullName>
        <label>Motivo Baja</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motivo_Cerrada_perdida__c</fullName>
        <label>Motivo Cerrada perdida</label>
        <picklist>
            <picklistValues>
                <fullName>Acompañamiento de auxiliar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acompañamiento de familiar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contrata con competencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datos de contacto erróneos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fallecimiento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falta de interés en contratar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ingreso en centro residencial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ingreso en hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No contesta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No disponer servicio de llaves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precio del servicio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servicio no se adapta a sus necesidades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servicio público</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usuario final rechaza servicio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>....</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Motivo_Rechazo__c</fullName>
        <label>Motivo Rechazo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motivo_Sin_iniciar_actividad__c</fullName>
        <label>Motivo Sin iniciar actividad</label>
        <picklist>
            <picklistValues>
                <fullName>Contrato enviado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falta contrato</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falta contrato financiera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falta ficha sociosanitaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falta SEPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falta disponibilidad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motivos técnicos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Motivo_de_Alta_Comercial__c</fullName>
        <label>Motivo de Alta Comercial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motivo_de_Alta__c</fullName>
        <label>Motivo de Alta</label>
        <picklist>
            <picklistValues>
                <fullName>A domicilio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A plaza pública mismo centro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A plaza pública otro centro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exitus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fin Convalecencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fin Respiro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Agudos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Motivo_de_No_entrada__c</fullName>
        <label>Motivo de No entrada</label>
        <picklist>
            <picklistValues>
                <fullName>Hospitalización</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renta baja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pendiente Plaza Pública</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Derivada SARquavitae</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros recursos SAD/TAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanece en otro centro residencial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No localizable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motivos emocionales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospección</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanencia en domicilio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interesa a medio plazo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exitus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precio caro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Motivo_no_Ingreso__c</fullName>
        <inlineHelpText>Campo obligatorio en Etapa= &apos;No ingreso&apos;</inlineHelpText>
        <label>Motivo no Ingreso</label>
        <picklist>
            <picklistValues>
                <fullName>Hospitalización</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renta baja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pendiente Plaza Pública</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Derivada SARquavitae</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros recursos SAD/TAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanece en otro centro residencial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No localizable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motivos emocionales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospección</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanencia en domicilio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interesa a medio plazo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exitus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precio caro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Motivo_no_ingreso_antiguo__c</fullName>
        <label>Motivo no ingreso antiguo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOC_11_Centro__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOC 11 Centro</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>NOC__c.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QBcqAAG</value>
            </filterItems>
            <filterItems>
                <field>NOC__c.Estado_Flujo__c</field>
                <operation>equals</operation>
                <value>Aprobado</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>NOC__c</referenceTo>
        <relationshipLabel>Oportunidades (NOC 11 Centro)</relationshipLabel>
        <relationshipName>Oportunidades3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NOC_11_Persona__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOC 11 Persona</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>NOC__c.Oportunidad__r.Id</valueField>
            </filterItems>
            <filterItems>
                <field>NOC__c.Estado_Flujo__c</field>
                <operation>equals</operation>
                <value>Aprobado</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>NOC__c</referenceTo>
        <relationshipLabel>Oportunidades (NOC 11 Persona)</relationshipLabel>
        <relationshipName>Oportunidades2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NOC_11_Renegociado__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOC 11 Renegociado</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>NOC__c.Oportunidad__r.Id</valueField>
            </filterItems>
            <filterItems>
                <field>NOC__c.Estado_Flujo__c</field>
                <operation>equals</operation>
                <value>Aprobado</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>NOC__c</referenceTo>
        <relationshipLabel>Oportunidades (NOC 11 Renegociado)</relationshipLabel>
        <relationshipName>Oportunidades5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NOC_12_Convenios__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOC 12 Convenios</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>NOC__c.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QBd0AAG</value>
            </filterItems>
            <filterItems>
                <field>NOC__c.Estado_Flujo__c</field>
                <operation>equals</operation>
                <value>Aprobado</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>NOC__c</referenceTo>
        <relationshipLabel>Oportunidades (NOC 12 Convenios)</relationshipLabel>
        <relationshipName>Oportunidades4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NOC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOC 9 Campaña</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>NOC__c.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QBcgAAG</value>
            </filterItems>
            <filterItems>
                <field>NOC__c.Estado_Campana__c</field>
                <operation>equals</operation>
                <value>Abierta, Cerrada</value>
            </filterItems>
            <filterItems>
                <field>NOC__c.Estado_Flujo__c</field>
                <operation>equals</operation>
                <value>Aprobado</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>NOC__c</referenceTo>
        <relationshipLabel>Oportunidades (NOC 9 Campaña)</relationshipLabel>
        <relationshipName>Oportunidades1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>N_Vivienda__c</fullName>
        <label>Nº Vivienda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N_dias_contrato__c</fullName>
        <label>Nº días contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Finanza__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Fianza</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_se_solicita_descuento__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No se solicita descuento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nombre_Avalista__c</fullName>
        <label>Nombre Avalista</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_Centro__c</fullName>
        <formula>Centro2__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre Centro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_Contacto__c</fullName>
        <formula>Persona_de_Contacto__r.FirstName &amp; &quot; &quot; &amp;  Persona_de_Contacto__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre Contacto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_Edificio__c</fullName>
        <label>Nombre Edificio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_Entidad_Bancaria__c</fullName>
        <inlineHelpText>Residencial: Campo obligatorio en etapa=&apos;Ingreso&apos; / &apos;Cerrada ganada&apos;</inlineHelpText>
        <label>Nombre Entidad Bancaria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_propio_y_plena_capacidad_de__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>En nombre propio y con plena capacidad de obrar y obligarse</inlineHelpText>
        <label>Nombre propio y plena capacidad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nombre_representante_legal_Cond__c</fullName>
        <formula>if( Representate_legagal__c=true,  Nombre_representante_legal__c, &quot;..............&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre representante legal Cond</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_representante_legal__c</fullName>
        <label>Nombre representante legal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_SS__c</fullName>
        <formula>Residente__r.Nuermo_Documento_Sanitario__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número SS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pagador_First_Name__c</fullName>
        <formula>Pagador__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pagador First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pagador_Last_Name__c</fullName>
        <formula>Pagador__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pagador Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pagador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pagador</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QAe0AAG</value>
            </filterItems>
            <filterItems>
                <field>Account.Exitus__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades (Pagador)</relationshipLabel>
        <relationshipName>OportunidadesPagador</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pagina_web__c</fullName>
        <inlineHelpText>Campo obligatorio si Prescriptor = Internet</inlineHelpText>
        <label>Página web</label>
        <picklist>
            <picklistValues>
                <fullName>Infoelder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inforesidencias</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Sarquavitae</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WOHNEN IM ALTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Te Acompaña</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Persona_de_Contacto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Persona de Contacto</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QAe0AAG</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades (Persona de Contacto)</relationshipLabel>
        <relationshipName>Oportunidades1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Persona_de_referencia__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A través de la persona de referencia</inlineHelpText>
        <label>Persona de referencia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Personal__c</fullName>
        <formula>if( ISBLANK( Fecha_Plan_Personal__c ) ,false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Personal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planta__c</fullName>
        <label>Planta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plantilla_Contrato__c</fullName>
        <label>Plantilla Contrato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Podologia_y_corte_de_pelo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Podología y corte de pelo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Precio_Colgantes__c</fullName>
        <inlineHelpText>A partir del 2º usuario</inlineHelpText>
        <label>Precio Colgantes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_Cuota_Mensual_Sin_Descuento__c</fullName>
        <formula>Precio_Servicio__c + Precio_Colgantes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Precio Cuota Mensual Sin Descuento</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_Cuota_Mensual__c</fullName>
        <formula>(Precio_Servicio__c *(1-  Descuento__c )) + (Precio_Colgantes__c * (1-Descuento_colgante__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Precio Cuota Mensual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>